# prompt-tuner-draft

./: .gitignore  README.md  Summary JS.json  instructions.md
prompt-tuner/: README.md  README_DYNAMIC_UI.md  pyproject.toml  test_dynamic_ui.py
prompt-tuner/app/: __init__.py  main.py
prompt-tuner/app/blueprints/: chat.py  diagnostics.py  main.py  prompts.py  submission_evaluation.py  workflows.py
prompt-tuner/app/static/css/: main.css
prompt-tuner/app/static/js/: form-generator.js  main.js  output-renderer.js  schema-parser.js  workflow-manager.js
prompt-tuner/app/templates/: about.html  base.html  index.html
prompt-tuner/app/templates/chat/: custom.html  interface.html
prompt-tuner/app/templates/diagnostics/: dashboard.html
prompt-tuner/app/templates/errors/: 404.html  500.html
prompt-tuner/app/templates/prompts/: list.html
prompt-tuner/app/templates/submission_evaluation/: evaluate.html  evaluate_clean.html  index.html  prompts.html  results.html
prompt-tuner/app/templates/workflows/: dynamic.html  endpoint.txt  enhanced.html  list.html
prompt-tuner/schema/: bike-insights.json  restaurant-recommender.json
src/: index.html
src/assets/js/: api-service.js  app.js  base-manager.js  display-utils.js  dynamic-workflow.js  manage-prompts.js  prompt-evaluation-config.js  prompt-evaluation.js  validation-utils.js  workflow-process.js
src/pages/: manage-prompts.html  prompt-evaluation.html  workflow-process.html
